# api/src/openapi_server/apis/check_job_api.py
@@ -27,7 +27,7 @@ from pydantic import Field, StrictStr
 from typing import Any
 from typing_extensions import Annotated
 from openapi_server.models.error_response import ErrorResponse
-from openapi_server.models.jobs_job_id_get200_response import JobsJobIdGet200Response
+from openapi_server.models.get_jobs_response import GetJobsResponse
 from openapi_server.security_api import get_token_ApiKeyAuth
 
 router = APIRouter()
@@ -40,7 +40,7 @@ for _, name, _ in pkgutil.iter_modules(ns_pkg.__path__, ns_pkg.__name__ + "."):
 @router.get(
     "/jobs/{job_id}",
     responses={
-        200: {"model": JobsJobIdGet200Response, "description": "ジョブの状態情報"},
+        200: {"model": GetJobsResponse, "description": "ジョブの状態情報"},
         404: {"model": ErrorResponse, "description": "ジョブが見つかりませんでした"},
     },
     tags=["CheckJob"],
@@ -52,7 +52,7 @@ async def jobs_job_id_get(
     token_ApiKeyAuth: TokenModel = Security(
         get_token_ApiKeyAuth
     ),
-) -> JobsJobIdGet200Response:
+) -> GetJobsResponse:
     """指定されたジョブIDの状態を取得します。"""
     if not BaseCheckJobApi.subclasses:
         raise HTTPException(status_code=500, detail="Not implemented")
