# api/src/openapi_server/apis/create_job_api_base.py
@@ -3,8 +3,8 @@
 from typing import ClassVar, Dict, List, Tuple  # noqa: F401
 
 from openapi_server.models.error_response import ErrorResponse
-from openapi_server.models.jobs_post201_response import JobsPost201Response
-from openapi_server.models.jobs_post_request import JobsPostRequest
+from openapi_server.models.post_jobs_request import PostJobsRequest
+from openapi_server.models.post_jobs_response import PostJobsResponse
 from openapi_server.security_api import get_token_ApiKeyAuth
 
 class BaseCreateJobApi:
@@ -15,7 +15,7 @@ class BaseCreateJobApi:
         BaseCreateJobApi.subclasses = BaseCreateJobApi.subclasses + (cls,)
     async def jobs_post(
         self,
-        jobs_post_request: JobsPostRequest,
-    ) -> JobsPost201Response:
+        post_jobs_request: PostJobsRequest,
+    ) -> PostJobsResponse:
         """YouTubeリンクを元に音源のダウンロードと音源/ボーカル分離のジョブを作成します。"""
         ...
