# api/src/openapi_server/models/get_jobs_response.py
@@ -1,45 +1,45 @@
 # coding: utf-8
 
 """
-MuSP API
+    MuSP API
 
-MuSPは、YouTubeリンクから音源をダウンロードし、Demucsで音源とボーカルを分離するWebアプリです。 本API仕様書は、ジョブの作成、状態確認、分離済み音源の取得を提供します。
+    MuSPは、YouTubeリンクから音源をダウンロードし、Demucsで音源とボーカルを分離するWebアプリです。 本API仕様書は、ジョブの作成、状態確認、分離済み音源の取得を提供します。 
 
-The version of the OpenAPI document: 1.0.0
-Generated by OpenAPI Generator (https://openapi-generator.tech)
+    The version of the OpenAPI document: 1.0.0
+    Generated by OpenAPI Generator (https://openapi-generator.tech)
 
-Do not edit the class manually.
+    Do not edit the class manually.
 """  # noqa: E501
 
-from __future__ import annotations
 
-import json
+from __future__ import annotations
 import pprint
 import re  # noqa: F401
-from typing import Any, ClassVar, Dict, List
+import json
 
-from pydantic import BaseModel, Field, StrictStr
 
+
+
+from pydantic import BaseModel, ConfigDict, Field, StrictStr
+from typing import Any, ClassVar, Dict, List, Optional
 try:
     from typing import Self
 except ImportError:
     from typing_extensions import Self
 
-
-class UrlJobIdGet200Response(BaseModel):
+class GetJobsResponse(BaseModel):
     """
-    UrlJobIdGet200Response
-    """  # noqa: E501
-
-    job_id: StrictStr = Field(description="ジョブの識別子")
-    url: StrictStr = Field(description="音源のS3 URL")
-    __properties: ClassVar[List[str]] = ["job_id", "url"]
+    GetJobsResponse
+    """ # noqa: E501
+    status: Optional[StrictStr] = Field(default=None, description="ジョブの現在の状態")
+    __properties: ClassVar[List[str]] = ["status"]
 
     model_config = {
         "populate_by_name": True,
         "validate_assignment": True,
         "protected_namespaces": (),
     }
+
 
     def to_str(self) -> str:
         """Returns the string representation of the model using alias"""
@@ -52,7 +52,7 @@ class UrlJobIdGet200Response(BaseModel):
 
     @classmethod
     def from_json(cls, json_str: str) -> Self:
-        """Create an instance of UrlJobIdGet200Response from a JSON string"""
+        """Create an instance of GetJobsResponse from a JSON string"""
         return cls.from_dict(json.loads(json_str))
 
     def to_dict(self) -> Dict[str, Any]:
@@ -67,21 +67,24 @@ class UrlJobIdGet200Response(BaseModel):
         """
         _dict = self.model_dump(
             by_alias=True,
-            exclude={},
+            exclude={
+            },
             exclude_none=True,
         )
         return _dict
 
     @classmethod
     def from_dict(cls, obj: Dict) -> Self:
-        """Create an instance of UrlJobIdGet200Response from a dict"""
+        """Create an instance of GetJobsResponse from a dict"""
         if obj is None:
             return None
 
         if not isinstance(obj, dict):
             return cls.model_validate(obj)
 
-        _obj = cls.model_validate(
-            {"job_id": obj.get("job_id"), "url": obj.get("url")}
-        )
+        _obj = cls.model_validate({
+            "status": obj.get("status")
+        })
         return _obj
+
+
