# api/src/openapi_server/models/post_jobs_request.py
@@ -1,45 +1,45 @@
 # coding: utf-8
 
 """
-MuSP API
+    MuSP API
 
-MuSPは、YouTubeリンクから音源をダウンロードし、Demucsで音源とボーカルを分離するWebアプリです。 本API仕様書は、ジョブの作成、状態確認、分離済み音源の取得を提供します。
+    MuSPは、YouTubeリンクから音源をダウンロードし、Demucsで音源とボーカルを分離するWebアプリです。 本API仕様書は、ジョブの作成、状態確認、分離済み音源の取得を提供します。 
 
-The version of the OpenAPI document: 1.0.0
-Generated by OpenAPI Generator (https://openapi-generator.tech)
+    The version of the OpenAPI document: 1.0.0
+    Generated by OpenAPI Generator (https://openapi-generator.tech)
 
-Do not edit the class manually.
+    Do not edit the class manually.
 """  # noqa: E501
 
-from __future__ import annotations
 
-import json
+from __future__ import annotations
 import pprint
 import re  # noqa: F401
+import json
+
+
+
+
+from pydantic import BaseModel, ConfigDict, Field, StrictStr
 from typing import Any, ClassVar, Dict, List
-
-from pydantic import BaseModel, Field, StrictStr
-
 try:
     from typing import Self
 except ImportError:
     from typing_extensions import Self
 
-
-class JobsPost201Response(BaseModel):
+class PostJobsRequest(BaseModel):
     """
-    JobsPost201Response
-    """  # noqa: E501
-
-    job_id: StrictStr = Field(description="作成されたジョブの識別子")
-    message: StrictStr = Field(description="状況メッセージ")
-    __properties: ClassVar[List[str]] = ["job_id", "message"]
+    PostJobsRequest
+    """ # noqa: E501
+    youtube_url: StrictStr = Field(description="YouTubeの動画リンク")
+    __properties: ClassVar[List[str]] = ["youtube_url"]
 
     model_config = {
         "populate_by_name": True,
         "validate_assignment": True,
         "protected_namespaces": (),
     }
+
 
     def to_str(self) -> str:
         """Returns the string representation of the model using alias"""
@@ -52,7 +52,7 @@ class JobsPost201Response(BaseModel):
 
     @classmethod
     def from_json(cls, json_str: str) -> Self:
-        """Create an instance of JobsPost201Response from a JSON string"""
+        """Create an instance of PostJobsRequest from a JSON string"""
         return cls.from_dict(json.loads(json_str))
 
     def to_dict(self) -> Dict[str, Any]:
@@ -67,24 +67,24 @@ class JobsPost201Response(BaseModel):
         """
         _dict = self.model_dump(
             by_alias=True,
-            exclude={},
+            exclude={
+            },
             exclude_none=True,
         )
         return _dict
 
     @classmethod
     def from_dict(cls, obj: Dict) -> Self:
-        """Create an instance of JobsPost201Response from a dict"""
+        """Create an instance of PostJobsRequest from a dict"""
         if obj is None:
             return None
 
         if not isinstance(obj, dict):
             return cls.model_validate(obj)
 
-        _obj = cls.model_validate(
-            {
-                "job_id": obj.get("job_id"),
-                "message": obj.get("message"),
-            }
-        )
+        _obj = cls.model_validate({
+            "youtube_url": obj.get("youtube_url")
+        })
         return _obj
+
+
